Fix column spacing and inside margin issues

--- a/theme/extras/document.less
+++ b/theme/extras/document.less
@@ -410,3 +410,10 @@
     padding: 1rem;
   }
 }
+
+#page-document .columns-view {
+  & .btn-block.primary,
+  & .btn-block.secondary {
+    margin-left: unset;
+  }
+}
